--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <div class="container">
-        <div class="panel active">
-            <h2>Water fall</h2>
+        <div class="panel active one">
+            <h3>Water fall</h3>
         </div>
 
-        <div class="panel">
-            <h2>sunny nature</h2>
+        <div class="panel two">
+            <h3>sunny nature</h3>
         </div>
 
-        <div class="panel">
-            <h2>summer nature</h2>
+        <div class="panel three">
+            <h3>summer nature</h3>
         </div>
 
-        <div class="panel">
-            <h2>Tree nature</h2>
+        <div class="panel four">
+            <h3>Tree nature</h3>
         </div>
 
-        <div class="panel">
-            <h2>Water body</h2>
+        <div class="panel five">
+            <h3>Water body</h3>
         </div>
 
     </div>
