--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -25,7 +25,7 @@
             <small>floring pop</small>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem cupiditate error deleniti quod sunt, eaque eos neque rerum beatae sapiente placeat voluptatem et culpa molestiae iusto praesentium, necessitatibus architecto ipsa fugiat labore. Illum deleniti veniam expedita eius dolor perferendis quaerat? Eum perspiciatis ipsam quod quasi aliquam veniam dolores nobis dolor, omnis consectetur praesentium officia ad est aut laborum? Tempora, in perspiciatis voluptatum, velit, quos facere aspernatur saepe sapiente ullam mollitia veniam quisquam eaque nulla voluptates harum. Voluptatem autem aliquam maiores dolores illo ducimus, odit architecto laboriosam nemo corrupti nulla voluptate veritatis adipisci excepturi iste numquam praesentium recusandae eos, laudantium commodi!</p>
 
-            <h3>My Dog</h3 >
+            <h3>My Delicacy</h3 >
             <img src="https://images.unsplash.com/photo-1657299170932-e75407883a6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="image">
 
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae nihil corporis totam excepturi necessitatibus. Dolore aperiam excepturi quia iure doloribus nemo exercitationem explicabo, similique ea praesentium tempora recusandae cum consequatur unde saepe dolor alias molestias eligendi quo iusto quos natus, voluptatem sunt culpa. Reiciendis labore atque inventore sequi voluptas? Illo animi delectus impedit ipsa deserunt unde nulla at, ad atque corrupti eveniet quia. Sint cupiditate deleniti iste repellat ipsa magnam ullam nesciunt saepe facere.
