--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="panel five">
-            <h3>Water body</h3>
+            <h3>Water body cool</h3>
         </div>
 
     </div>
