--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -13,5 +13,6 @@
         <input type="text" placeholder="search...">
         <button class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
